{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 69,
  "lineage": "3753b5d8-7768-119e-e756-e63a089be310",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:675958891276:security-group/sg-09338fb7b598bd9a8",
            "description": "shared-network Dev Mgmt Security Group",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Data_sg"
                ]
              }
            ],
            "id": "sg-09338fb7b598bd9a8",
            "name": "Data_sg",
            "tags": {
              "Accel-P": "PBMM",
              "Accelerator": "PBMM",
              "AcceleratorName": "PBMM",
              "Name": "Data_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-018906cab60cf165b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:415928670738:subnet/subnet-0a663db91e3d61619",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "available_ip_address_count": 4079,
            "cidr_block": "10.12.48.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Data_Dev_aza_net"
                ]
              }
            ],
            "id": "subnet-0a663db91e3d61619",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "415928670738",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Accelerator": "PBMM",
              "Name": "Data_Dev_aza_net"
            },
            "vpc_id": "vpc-018906cab60cf165b"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:415928670738:subnet/subnet-0d0e52f2aabe9cd5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "available_ip_address_count": 4082,
            "cidr_block": "10.12.144.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Data_Dev_azb_net"
                ]
              }
            ],
            "id": "subnet-0d0e52f2aabe9cd5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "415928670738",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Accelerator": "PBMM",
              "Name": "Data_Dev_azb_net"
            },
            "vpc_id": "vpc-018906cab60cf165b"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:415928670738:vpc/vpc-018906cab60cf165b",
            "cidr_block": "10.12.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0563acff0920032a0",
                "cidr_block": "10.12.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-77a7911f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-018906cab60cf165b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c1b1344ba706dbe4",
            "owner_id": "415928670738",
            "state": "available",
            "tags": {
              "Accelerator": "PBMM",
              "Name": "Dev_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:675958891276:security-group/sg-07ace3455251e58c0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07ace3455251e58c0",
            "ingress": [],
            "name": "aurora-demodb-postgres-20220826184223570200000001",
            "name_prefix": "aurora-demodb-postgres-",
            "owner_id": "675958891276",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aurora-aurora-demodb-postgres",
              "managed-by": "terraform"
            },
            "tags_all": {
              "Name": "aurora-aurora-demodb-postgres",
              "managed-by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-018906cab60cf165b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "From allowed SGs",
            "from_port": 5432,
            "id": "sgrule-3563994305",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07ace3455251e58c0",
            "self": false,
            "source_security_group_id": "sg-09338fb7b598bd9a8",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.a",
            "data.aws_subnet.a",
            "data.aws_subnet.b",
            "data.aws_vpc.selected",
            "data.vault_generic_secret.dbsecrets_auth",
            "module.db.aws_db_subnet_group.this",
            "module.db.aws_rds_cluster.this",
            "module.db.aws_security_group.this",
            "module.db.random_id.snapshot_identifier",
            "module.db.random_password.master_password"
          ]
        }
      ]
    }
  ]
}